# finetuning-experiment

./: README.md  gemma_responses.json  main.ipynb  model_fine_tuning.ipynb  phi_responses.json  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py  mistral_responses-checkpoint.json  model_eval-checkpoint.ipynb  model_fine_tuning-checkpoint.ipynb
logs/: events.out.tfevents.1747070627.Sagars_PC.30788.0  events.out.tfevents.1747078210.Sagars_PC.30788.1  events.out.tfevents.1747088112.Sagars_PC.17696.0  events.out.tfevents.1747088494.Sagars_PC.17696.1  events.out.tfevents.1747088920.Sagars_PC.17696.2  events.out.tfevents.1747089046.Sagars_PC.17696.3  events.out.tfevents.1747098958.Sagars_PC.17696.4
results/google/gemma-2b-it/: adapter_config.json
results/microsoft/phi-2/: adapter_config.json
results/mistralai/Mistral-7B-v0.1/: adapter_config.json
