[project]
name = "finetuning-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "jsonlines>=4.0.0",
    "peft>=0.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "trl>=0.17.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]